working on search

--- a/app/components/nav/nav.html
+++ b/app/components/nav/nav.html
@@ -17,8 +17,8 @@
                             <i class="pe-7s-search"></i>
                         </a>
                     </li>
-                    <form id="searchform" ng-submit="nav.search(nav.query)" role="search" class="navbar-form-custom" method="post">
-                        <input ng-model="nav.query" type="text" placeholder="Search.." class="form-control" name="search">
+                    <form id="searchform" ng-submit="nav.search(global.query)" role="search" class="navbar-form-custom" method="post">
+                        <input ng-model="global.query" type="text" placeholder="Search.." class="form-control" name="search">
                     </form>
                 </div>
             </div>
