--- a/app/components/search/search.dashboard.html
+++ b/app/components/search/search.dashboard.html
@@ -1,9 +1,11 @@
 <div>
-    <div class="panel-body col-md-12 col-lg-6">
-        <div ui-view="people"></div>
-    </div>
-    <div class="panel-body col-md-12 col-lg-6">
-        <div ui-view="companies"></div>
+    <div class="row">
+        <div class="panel-body col-md-12 col-lg-6">
+            <div ui-view="people"></div>
+        </div>
+        <div class="panel-body col-md-12 col-lg-6">
+            <div ui-view="companies"></div>
+        </div>
     </div>
 </div>
 
