resource search working

--- a/app/components/companies/company.dashboard.network.panel.html
+++ b/app/components/companies/company.dashboard.network.panel.html
@@ -10,7 +10,9 @@
         </div>
     </div>
     <div class="col-xs-4">
-        <h3 class="text-info pull-right">{{profile.company.team.count[type.name]}}</h3>
+        <a ui-sref="user.list">
+            <h3 class="text-info pull-right">{{profile.company.team.count[type.name]}}</h3>
+        </a>
     </div>
 </div>
 <div class="panel-footer" style="background: #fff; text-align: center; padding-bottom:32px;">
