--- a/app/components/nav/nav.html
+++ b/app/components/nav/nav.html
@@ -48,7 +48,7 @@
                             <a>Alerts</a>
                         </li>
                         <li ng-if="global.user">
-                            <a ui-sref="settings({ location_path: global.location.key })">Settings</a>
+                            <a ui-sref="settings({ location_path: global.location.key, community_path: '' })">Settings</a>
                         </li>
                         <li>
                             <a href="mailto:james@startupcommunity.org?subject=Help&20please.." target="_blank">Help</a>
@@ -97,7 +97,7 @@
                         </a>
                     </li>
                     <li ng-if="global.user" class="dropdown">
-                        <a ui-sref="settings({ location_path: global.location.key})">
+                        <a ui-sref="settings({ location_path: global.location.key, community_path: '' })">
                             <i class="pe-7s-config"></i>
                             <p style="font-size: 10px; margin-top: -4px; margin-left: -7px;">Settings</p>
                         </a>
@@ -163,11 +163,11 @@
                     <li ng-repeat="item in global.nav_top.parents | orderBy: 'item.value' : reverse">
                         <a ui-sref="community.dashboard({location_path: (global.location.key || global.user.profile.home), community_path: item.label, tail_path: ''})" ng-class="{active: global.path.includes('/' + item.label)}" ng-click="cl_working = true">
                             <span>
-                                <i ng-class="'fa ' + nav.industry_icons[item.label].icon"></i>
+                                <i ng-class="'fa ' + global.industry_icons[item.label].icon"></i>
                                 {{::item.label[0].toUpperCase() + item.label.slice(1)}}
                                 <span loading-bars ng-show="cl_working"></span>
-                                <a ng-repeat="c in ::nav.clusters[item.label]" ui-sref="community.dashboard({location_path: (global.location.key || global.user.profile.home), community_path: c.key, tail_path: ''})" ng-class="{active: global.path.includes('/' + c.key)}" ng-click="clc_working = true" style="padding-left:30px;">
-                                    <i ng-class="'fa ' + nav.industry_icons[item.label].icon"></i>
+                                <a ng-repeat="c in ::global.location.clusters[item.label]" ui-sref="community.dashboard({location_path: (global.location.key || global.user.profile.home), community_path: c.key, tail_path: ''})" ng-class="{active: global.path.includes('/' + c.key)}" ng-click="clc_working = true" style="padding-left:30px;">
+                                    <i ng-class="'fa ' + global.industry_icons[item.label].icon"></i>
                                     {{::c.community_profiles[global.location.key].name[0].toUpperCase() + c.community_profiles[global.location.key].name.slice(1);}}
                                     <span loading-bars ng-show="clc_working"></span>
                                 </a>
