--- a/app/components/nav/nav.embed_settings.html
+++ b/app/components/nav/nav.embed_settings.html
@@ -1,7 +1,7 @@
 <div class="inmodal">
     <div class="color-line"></div>
     <div class="modal-header">
-        <h4 class="modal-title">Settings for {{global.community.profile.name}}</h4>
+        <h4 class="modal-title">Settings for {{settings.thiscommunity.profile.name}}</h4>
         <p class="font-bold">Note: These settings can be modified by other Leaders of this community.</p>
     </div>
     <div class="modal-body">
