--- a/app/components/settings.html
+++ b/app/components/settings.html
@@ -21,7 +21,7 @@
                 <hr>
                 <div ng-repeat="k in settings.resources">
                     <div style="padding-bottom:10px; font-size: 18px;">{{ k.profile.name }}
-                        <button ng-click="nav.embedSettings(k)" class="btn btn-xs pull-right">Embed</button>
+                        <button ng-click="nav.embedSettings(k.key)" class="btn btn-xs pull-right">Embed</button>
                         <button ui-sref="resource.add({community_path: k.key})" class="btn btn-primary btn-xs pull-right" style="margin-right: 5px;">Edit</button>
                     </div>
                 </div>
@@ -50,8 +50,8 @@
                 <hr>
                 <div ng-repeat="(k, v) in global.user.roles.leader">
                     <div ng-if="v == global.location.key && settings.clusters[k]" style="padding-bottom:10px; font-size: 18px;">{{ settings.clusters[k].community_profiles[global.location.key].name }}
-                        <button ng-click="nav.embedSettings(settings.clusters[k]);" class="btn btn-xs pull-right">Embed</button>
-                        <button ng-click="nav.editCommunity(settings.clusters[k]);" class="btn btn-primary btn-xs pull-right" style="margin-right: 5px;">Edit</button>
+                        <button ng-click="nav.embedSettings(k);" class="btn btn-xs pull-right">Embed</button>
+                        <button ng-click="nav.editCommunity(k);" class="btn btn-primary btn-xs pull-right" style="margin-right: 5px;">Edit</button>
                     </div>
                 </div>
                 <ul class="nav nav-second-level" style="margin-left: -15px;">
@@ -70,7 +70,7 @@
                 </div>
                 <hr>
                 <div ng-if="global.user.communities.indexOf(global.location.key) > -1" style="padding-bottom:10px; font-size: 18px;">{{ global.location.profile.name }}
-                    <button ng-click="nav.embedSettings(global.location);" class="btn btn-xs pull-right">Embed</button>
+                    <button ng-click="nav.embedSettings(global.location.key);" class="btn btn-xs pull-right">Embed</button>
                 </div>
             </div>
         </div>
