--- a/app/components/nav/nav.html
+++ b/app/components/nav/nav.html
@@ -48,7 +48,7 @@
                             <a>Alerts</a>
                         </li>
                         <li ng-if="global.user">
-                            <a ui-sref="settings({ location_path: global.location.key, community_path: '' })">Settings</a>
+                            <a ui-sref="settings({ location_path: global.location.key, community_path: '', tail_path: '' })">Settings</a>
                         </li>
                         <li>
                             <a href="mailto:james@startupcommunity.org?subject=Help&20please.." target="_blank">Help</a>
@@ -97,7 +97,7 @@
                         </a>
                     </li>
                     <li ng-if="global.user" class="dropdown">
-                        <a ui-sref="settings({ location_path: global.location.key, community_path: '' })">
+                        <a ui-sref="settings({ location_path: global.location.key, community_path: '', tail_path: '' })">
                             <i class="pe-7s-config"></i>
                             <p style="font-size: 10px; margin-top: -4px; margin-left: -7px;">Settings</p>
                         </a>
@@ -188,7 +188,6 @@
     <!-- Main Content -->
     <div ui-view >
         <div ng-style="{'background-color': nav.color}" ng-class="{'wrapper' : !global.embedded}">
-            <div class="splash" id="minorsplash" style="z-index: 2100;"><div class="splash-title"><a href="/"><img src="/public/images/sc_logo.png" style="width: 75%;" alt="StartupCommunity.org Logo"/></a><img src="/public/images/loading-bars.svg" width="64" height="64" /> </div></div>
             <div ng-style="{'background-color': nav.color}" ui-view="header"></div>
             <div ng-class="{'content' : !global.embedded}" ng-style="{'background-color': nav.color}">
                 <div ui-view="content"></div>
