--- a/app/components/resources/resource.add.html
+++ b/app/components/resources/resource.add.html
@@ -164,7 +164,7 @@
                                 <input type="text" class="form-control input-lg" placeholder="{{ add.selectedCompany.url }}" ng-model="add.selectedCompany.url" style="margin-bottom: 5px;" ng-disabled="add.update">
                                 <em style="font-size: 11px;" class="pull-right">The path will be: startupcommunity.org/<strong><span style="text-transform: lowercase;">{{ add.selectedCompany.url }}</span></strong></em>
                             </div>
-                            <div class="col-lg-12" style="margin-top:-10px;">
+                            <div class="col-lg-12">
                                 <h4 class="w400">
 
                                     Click below to edit the summary:
