--- a/app/components/users/user.list.html
+++ b/app/components/users/user.list.html
@@ -114,7 +114,7 @@
                 </div>
                 -->
                 <span style="font-size: 17px;" ng-bind-html="users.title"></span>
-                <span><i ng-show="users.loadingUser" class="fa fa-refresh fa-spin" style="padding: 4px; color: #aaa; font-size: 17px; margin-left: 5px;"></i></span>
+                <span loading-bars ng-if="users.loadingUser"></span>
             </div>
 
             <div class="panel-body content" style="padding-top: 0;">
