--- a/app/components/users/user.invite.html
+++ b/app/components/users/user.invite.html
@@ -1,7 +1,7 @@
 <div class="inmodal">
     <div class="color-line"></div>
     <div class="modal-header">
-        <h4 class="modal-title">Invite people to join {{invite.community.profile.name}}</h4>
+        <h4 class="modal-title">Invite people to join {{global.community.profile.name}}</h4>
         <p class="font-bold">If you invite someone who is already in the system, they will be added to your community immediately without being notified. Otherwise we will send them an invitation by email.</p>
     </div>
     <div class="modal-body">
@@ -21,7 +21,7 @@
                                 <input type="checkbox" class="form-control checkbox" ng-model="invite.form.resources[k.key]">
                             </td>
                             <td style="padding-left:5px; padding-top:5px;">
-                                Add them to {{ k.community_profiles[invite.location.key].name }}
+                                Add them to {{ k.community_profiles[global.location.key].name }}
                             </td>
                         </tr>
                     </table>
