--- a/app/components/users/user.dashboard.html
+++ b/app/components/users/user.dashboard.html
@@ -27,8 +27,8 @@
                 <a ng-click="profile.contact(global.location.key)" title="Contact {{item.value.profile.name}}" class="btn btn-sm btn-info" style="margin-left: 5px;">Contact me
                 </a>
                 <div style="padding-top:10px; overflow: hidden; height: 50px; margin-bottom: -10px;">
-                    <buttn ng-repeat="skill in profile.user.profile.skills" style="margin-right: 5px;" ladda="btnworking" ng-click="btnworking = true" class="ladda-btn btn btn-outline btn-default btn-xs" ui-sref="search.dashboard({location_path: global.location.key})">
-                        {{skill}}
+                    <buttn ng-repeat="skill in profile.user.profile.skills" style="margin-right: 5px;" ladda="btnworking" ng-click="btnworking = true" class="ladda-btn btn btn-outline btn-default btn-xs" ui-sref="search.dashboard({location_path: global.location.key, community_path: '', tail_path: '', query: skill})">
+                        {{::skill}}
                     </buttn>
                 </div>
             </header>
