--- a/app/components/users/user.list.item.html
+++ b/app/components/users/user.list.item.html
@@ -1,12 +1,12 @@
 <div class="col-md-12 dash-table">
     <div>
-        <a ui-sref="user.dashboard({ community_path: item.path.key, profile: item.value, query: null })" ng-click="nav.loaders[item.value.profile.name] = true" title="View {{::item.value.profile.name | words:0}}'s Profile">
+        <a ui-sref="user.dashboard({ community_path: item.path.key, tail_path: '', profile: item.value, query: null })" ng-click="nav.loaders[item.value.profile.name] = true" title="View {{::item.value.profile.name | words:0}}'s Profile">
             <img ng-src="{{item.value.profile.avatar || '/public/images/blank_avatar.png'}}" alt="{{::item.value.profile.name}}" class="user-img widget-image img-circle pull-left" onerror="this.src='/public/images/blank_avatar.png'"/>
         </a>
     </div>
     <div class="user-row list-hr">
         <a ng-show="(global.community.resource || global.location.resource) && global.user.roles.leader[global.community.key]" ng-click="nav.removeUser(item)" title="Remove {{::item.value.profile.name}} from {{global.community.profile.name}}" style="font-size: 11px; color:#bbb; padding-left:4px;">remove</a>
-        <a ui-sref="user.dashboard({ community_path: item.path.key, profile: item.value, query: null })" title="View {{::item.value.profile.name | words:0}}'s Profile" ng-click="nav.loaders[item.value.profile.name] = true" class="dash-row-div"><strong>{{::item.value.profile.name}} </strong></a>
+        <a ui-sref="user.dashboard({ community_path: item.path.key, tail_path: '', profile: item.value, query: null })" title="View {{::item.value.profile.name | words:0}}'s Profile" ng-click="nav.loaders[item.value.profile.name] = true" class="dash-row-div"><strong>{{::item.value.profile.name}} </strong></a>
         <div class="dash-row-summary" ng-show="item.value.profile.summary.length > 0">
             <a title="Show Summary" ng-click="showSummary = !showSummary" class="user-summary">&nbsp;<i style="font-size: 8px;" class="fa fa-chevron-down"></i></a>
         </div>
