--- a/app/less/various.less
+++ b/app/less/various.less
@@ -1075,7 +1075,7 @@ a:hover, a:focus {
 .navbar-form-custom {
   display: inline-block;
   height: 52px;
-  width: 350px;
+  max-width: 350px;
   padding: 7px 0 0 0;
 }
 
