--- a/app/components/companies/company.dashboard.network.html
+++ b/app/components/companies/company.dashboard.network.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12 col-md-6">
-        <div class="hpanel" ng-class="type.color" ng-repeat="type in ::profile.team_panels" ng-if="!($index % 2) && (type.name !== 'leader' || profile.company.resource)" ng-include="'components/companies/company.dashboard.network.panel.html'">
+        <div class="hpanel" ng-class="type.color" ng-repeat="type in ::profile.team_panels" ng-if="!($index % 2) && (type.name !== 'leader' || global.profile.resource)" ng-include="'components/companies/company.dashboard.network.panel.html'">
         </div>
     </div>
     <div class="col-xs-12 col-md-6">
@@ -9,5 +9,5 @@
     </div>
 </div>
 <div class="row" style="text-align: center;">
-    <button class="btn btn-xs btn-default" ui-sref="company.add">Add yourself to this {{profile.company.resource ? 'resource' : 'company'}}</button>
+    <button class="btn btn-xs btn-default" ui-sref="company.add">Add yourself to this {{global.profile.resource ? 'resource' : 'company'}}</button>
 </div>
