--- a/app/components/nav/nav.html
+++ b/app/components/nav/nav.html
@@ -188,6 +188,7 @@
     <!-- Main Content -->
     <div ui-view >
         <div ng-style="{'background-color': nav.color}" ng-class="{'wrapper' : !global.embedded}">
+            <div class="splash" id="minorsplash" style="display: none;"><div class="splash-title"><a href="/"><img src="/public/images/sc_logo.png" style="width: 75%;" alt="StartupCommunity.org Logo"/></a><img src="/public/images/loading-bars.svg" width="64" height="64" /> </div></div>
             <div ng-style="{'background-color': nav.color}" ui-view="header"></div>
             <div ng-class="{'content' : !global.embedded}" ng-style="{'background-color': nav.color}">
                 <div ui-view="content"></div>
