--- a/app/components/companies/company.list.item.html
+++ b/app/components/companies/company.list.item.html
@@ -1,14 +1,14 @@
 <div class="col-md-12 dash-table">
     <div>
-        <a ui-sref="company.dashboard({ community_path: item.path.key, tail_path: '', profile: item.value, query: null })" ng-click="nav.loaders[item.value.profile.name] = true" title="View {{::item.value.profile.name | words:0}}'s Profile"><img
+        <a ui-sref="company.dashboard({ community_path: item.path.key, tail_path: '', profile: item.value, query: null })" ng-click="global.loaders[item.value.profile.name] = true" title="View {{::item.value.profile.name | words:0}}'s Profile"><img
                 ng-src="{{item.value.profile.avatar || '/public/images/browser_icon.jpg'}}" alt="{{::item.value.profile.name}}" class="user-img widget-image pull-left" onerror="this.src='images/browser_icon.jpg'"/></a>
     </div>
     <div class="user-row list-hr">
-        <a ui-sref="company.dashboard({ community_path: item.path.key, tail_path: '', profile: item.value, query: null })" title="View {{::item.value.profile.name | words:0}}'s Profile" ng-click="nav.loaders[item.value.profile.name] = true" class="dash-row-div"><strong>{{::item.value.profile.name}} </strong></a>
+        <a ui-sref="company.dashboard({ community_path: item.path.key, tail_path: '', profile: item.value, query: null })" title="View {{::item.value.profile.name | words:0}}'s Profile" ng-click="global.loaders[item.value.profile.name] = true" class="dash-row-div"><strong>{{::item.value.profile.name}} </strong></a>
         <div class="dash-row-summary" ng-show="(item.value.profile.summary).length > 0" style="margin-left: -5px;">
             <a title="Show Summary" ng-click="showSummary = !showSummary" class="user-summary">&nbsp;&nbsp;<i style="font-size: 8px;" class="fa fa-chevron-down"></i></a>
         </div>
-        <span loading-bars ng-if="nav.loaders[item.value.profile.name]"></span>
+        <span loading-bars ng-if="global.loaders[item.value.profile.name]"></span>
         <span ng-if="!item.value.resource && item.value.profile.parents[0]">
             <li class="role-right">
                 <button style="cursor: default;" class="btn btn-xs btn-outline btn-default">{{item.value.profile.parents[0][0].toUpperCase() + item.value.profile.parents[0].slice(1);}}</button>
