--- a/app/components/header/header_small.html
+++ b/app/components/header/header_small.html
@@ -32,15 +32,15 @@
                 </ul>
                 <div ng-if="global.community.type !== 'user' && global.community.type !== 'company'">
                     <div ng-if="!global.user" style="padding-top: 6px; margin-right: 8px; float: right;">
-                        <button ladda="addco" class="ladda-btn btn btn-sm btn-success" ng-click="addco = true; nav.requestInvitation();" style="font-size: 12px; color: #fff;">Add Company</button>
+                        <button ladda="global.loaders['addco']" class="ladda-btn btn btn-sm btn-success" ng-click="global.loaders['addco'] = true; nav.requestInvitation();" style="font-size: 12px; color: #fff;">Add Company</button>
                     </div>
                     <div ng-if="global.user" style="padding-top: 6px; margin-right: 8px; float: right;">
-                        <button ng-if="nav.state.current.name !== 'resource.list'" ladda="addco" ng-click="addco = true" class="ladda-btn btn btn-sm btn-success" ui-sref="company.add" style="font-size: 12px; color: #fff;">Add Company</button>
-                        <button ng-if="nav.state.current.name == 'resource.list'" ladda="addres" ng-click="addres = true" class="ladda-btn btn btn-sm btn-success" ui-sref="resource.add" style="font-size: 12px; color: #fff;">Add Resource</button>
+                        <button ng-if="nav.state.current.name !== 'resource.list'" ladda="global.loaders['addco']" ng-click="global.loaders['addco'] = true" class="ladda-btn btn btn-sm btn-success" ui-sref="company.add" style="font-size: 12px; color: #fff;">Add Company</button>
+                        <button ng-if="nav.state.current.name == 'resource.list'" ladda="global.loaders['addres']" ng-click="global.loaders['addres'] = true" class="ladda-btn btn btn-sm btn-success" ui-sref="resource.add" style="font-size: 12px; color: #fff;">Add Resource</button>
                     </div>
 
                     <div ng-if="global.user" style="padding-top: 6px; margin-right: 8px; float: right;">
-                        <button ladda="invitepeople" class="ladda-btn btn btn-sm btn-info" ng-click="invitepeople = true; nav.invitePeople();" style="font-size: 12px; color: #fff;">Invite People</button>
+                        <button ladda="global.loaders['invite']" class="ladda-btn btn btn-sm btn-info" ng-click="global.loaders['invite'] = true; nav.invitePeople();" style="font-size: 12px; color: #fff;">Invite People</button>
                     </div>
                 </div>
             </div>
