--- a/app/components/welcome/welcome.html
+++ b/app/components/welcome/welcome.html
@@ -7,9 +7,13 @@
                 <div class="text-center m-b-md" style="margin-left: -15px;">
                     <a href="/"><img style="width:75%" src="/public/images/sc_logo.png" alt="StartupCommunity.org Logo"/></a>
                 </div>
+
                 <div class="hpanel">
                     <div class="panel-body" style="padding: 20px; border-top: 1px solid #82bc4b;">
-                        <div ng-if="!welcome.auth">
+
+                        <!-- Initial Welcome Screen -->
+
+                        <div ng-if="welcome.panel == 'auth'">
                             <h4 class="text-center" style="margin-bottom: 20px; color: #5A5A5A; font-size: 25px; line-height: 1.25;">Welcome!<br><hr>
                             You have been invited to join the {{welcome.location}} Startup Community</h4>
                             <h4 class="text-center" style="margin-bottom: 13px;">
@@ -22,12 +26,149 @@
                             <br>
                             <div alert-box this-alert="welcome.alert"></div>
                         </div>
-                        <div ng-if="welcome.auth" ui-view></div>
+
+                        <!-- Roles -->
+
+                        <div ng-if="welcome.panel == 'roles'" class="hpanel">
+                            <div class="panel-heading" style="text-align:center;">
+                                <h4 style="font-size: 25px; line-height: 1.25;">{{global.user.profile.linkedin.firstName}}, please select your roles within the community:</h4>
+                            </div>
+                            <div class="panel-body no-padding">
+                                <div class="list-group ">
+
+                                    <a class="list-group-item" ng-repeat="r in welcome.selectRoles" ng-if="$index >= 1" ng-class="{'active' : welcome.roles[r.value]}" ng-click="welcome.roles[r.value] = !welcome.roles[r.value]">
+                                        <div class="stats-icon pull-right" ng-show="welcome.roles[r.value]"><i class="pe-7s-check fa-2x" ></i></div>
+                                        <h5 class="list-group-item-heading">{{ r.text }}</h5>
+                                        <p class="list-group-item-text">{{ r.description }}</p>
+                                    </a>
+
+                                </div>
+                            </div>
+                            <br>
+                            <p style="text-align: center;">Select multiple roles if appropriate.</p>
+                            <div alert-box this-alert="welcome.alert"></div>
+                            <h4 style="margin-bottom: 13px;"><a class="btn btn-info pull-right" ng-click="welcome.panel = 'profile'">Continue</a></h4>
+                        </div>
+
+                        <!-- Profile -->
+
+                        <div ng-if="welcome.panel == 'profile'" class="hpanel">
+                            <div class="panel-heading" style="text-align:center;">
+                                <h4 style="font-size: 25px; line-height: 1.25;">{{global.user.profile.linkedin.firstName}}, please verify your
+                                    profile:</h4><br/>
+
+                                <img class="img-circle m-b" style="height:75px;"
+                                     ngf-thumbnail="global.user.profile.avatar || file || '/public/images/blank_avatar.png'">
+                                <br/>
+                                <label class="uploader_text">
+                                    <input type="file" ng-model="file" name="file" ngf-pattern="'image/*'"
+                                           accept="image/*" ngf-max-size="2MB" ngf-min-height="50"
+                                           ngf-resize="{width: 100, height: 100}" ngf-select="welcome.uploadAvatar($file)" style="display:none;"/>
+                                    <h6>Change picture..</h6>
+                                </label>
+
+                                <div style="margin-left: -10px; padding-top: 1px;">
+            <span ng-repeat="(item, val) in welcome.roles" class="user-role"><i
+                    ng-attr-title="{{item.toUpperCase()[0] + item.slice(1);}}"
+                    ng-class="{'text-primary pe-7s-paper-plane' : val && item == 'founder', 'text-danger pe-7s-flag' : val && item == 'leader', 'text-info pe-7s-study' : val && item == 'mentor', 'text-success pe-7s-gleam' : val && item == 'investor', 'text-default pe-7s-ball' : val && item == 'team', 'text-warning pe-7s-portfolio' : val && item == 'provider'}"></i></span>
+                                </div>
+                                <div>
+                                    <h4 style="line-height:1.75;">
+                                        Your name is <input type="text" style="border: 1px solid #eee;" class="input-sm" ng-model="global.user.profile.name" />,<br/>
+                                        your email address is <input type="email" style="border: 1px solid #eee;" class="input-sm" ng-model="global.user.profile.email" /><br/>
+                                        and your headline will be: <input type="text" style="border: 1px solid #eee;" class="input-sm" ng-model="global.user.profile.headline" />.
+                                        <br/><br/>
+                                        Select an industry you most closely associate with:
+                                        <select class="form-control m-b" ng-model="welcome.selectedParent" style="margin-bottom: 5px;" required>
+                                            <option ng-repeat="parent in welcome.parents">{{ parent }}</option>
+                                        </select>
+                                        <div class="m-t-xs" ng-show="!welcome.selectedParent && welcome.submitted">
+                                            <span class="text-danger">&nbsp;&nbsp;<i class="fa fa-exclamation-triangle"></i> An industry is required.</span>
+                                        </div>
+                                        <br/>
+                                        Click below to edit your summary.
+                                    </h4>
+                                </div>
+                                <div class="summary_form" style="text-align: left;">
+                                    <div summernote class="summernote" ng-model="global.user.profile.summary" ng-model-options="{ debounce: 250, blur: 0 }" style="min-height: 34px;" config="{
+                                height: 50,
+    toolbar: [
+            ['edit',['undo','redo']],
+            ['headline', ['style']],
+            ['style', ['bold', 'italic', 'underline', 'clear']],
+            ['textsize', ['fontsize']],
+            ['alignment', ['ul', 'ol', 'paragraph', ]],
+            ['view', ['fullscreen']],
+            ['insert', ['link','hr']]
+        ]
+  }">{{global.user.profile.summary || 'Nothing here!'}}</div>
+                                </div>
+
+
+                                <div alert-box this-alert="welcome.alert"></div>
+                                <h4 style="margin-bottom: 13px;">
+                                    <a class="btn btn-info pull-left" ng-click="welcome.panel = 'roles'">Back</a>
+                                    <a class="btn btn-info pull-right" ng-click="welcome.submitProfile()">Continue</a></h4>
+                            </div>
+                        </div>
+
+                        <!-- Skills -->
+
+                        <div ng-if="welcome.panel == 'skills'" class="hpanel">
+                            <div class="panel-heading" style="text-align:center;">
+                                <h4 style="font-size: 25px; line-height: 1.25;">Thank you. Now select up to ten skills or industries that you specialize in.</h4>
+                            </div>
+                            <div class="panel-body industry_select" style="padding:5px;">
+                                <ui-select multiple ng-model="welcome.skills" ng-disabled="disabled" tagging="true" tagging-label="(new)" autofocus="true" limit="10" alert_title="Sorry, only 10 items here." alert_text="Focus on industries or skills that you are truly badass with." alert_type="warning" style="border:none;">
+                                    <ui-select-match placeholder="Start typing an industry or skill..">{{$item}}</ui-select-match>
+                                    <ui-select-choices repeat="skill in welcome.industries | filter:$select.search | limitTo: 25">
+                                        {{skill.replace('undefined','')}}
+                                    </ui-select-choices>
+                                </ui-select>
+                            </div>
+                            <br>
+                            <p style="text-align: center;">Industries are markets that you are an expert in. Skills are specific abilities that you possess. They help people find you while searching for experts in the community.</p>
+                            <div alert-box this-alert="welcome.alert"></div>
+                            <h4 style="margin-bottom: 13px;">
+                                <a class="btn btn-info pull-left" ng-click="welcome.panel = 'profile'">Back</a>
+                                <a class="btn btn-info pull-right" ng-click="welcome.panel = 'invite'">Continue</a></h4>
+                        </div>
+
+                        <!-- Invite People -->
+
+                        <div ng-if="welcome.panel == 'invite'" class="hpanel">
+                            <div class="panel-heading" style="text-align:center;">
+                                <h4 class="modal-title">Invite others to join this community.</h4>
+                            </div>
+                            <div>
+                                <div class="hpanel">
+                                    <div class="panel-heading" style="font-size: 20px;">Enter an email address:</div>
+                                    <div style="padding-bottom: 30px;">
+                                        <form role="form" name="invite.form" novalidate ng-submit="invite.inviteUser()">
+                                            <div class="form-group">
+                                                <input type="email" placeholder="new@mentor.com" class="form-control input-lg" required name="email" ng-model="invite.form.email_value">
+                                                <div class="m-t-xs" ng-show="invite.form.email.$invalid && invite.form.submitted">
+                                                    <span class="text-danger" ng-show="invite.form.email.$error">&nbsp;&nbsp;<i class="fa fa-exclamation-triangle"></i> Please enter a valid email address..</span>
+                                                </div>
+                                            </div>
+                                            <input type="submit" style="float:left" class="finish btn-success btn" ng-class="{'disabled' : disabled}" value="Invite Person" /><div style="padding-top: 6px; margin-bottom: -24px;" ng-show="invite.working" loading-bars></div>
+                                        </form>
+                                    </div>
+                                </div>
+                                <div alert-box this-alert="invite.alert"></div>
+                            </div>
+                            <h4 style="margin-bottom: 13px;">
+                                <a class="btn btn-info pull-left" ng-click="welcome.panel = 'skills'">Back</a>
+                                <button ladda="welcome.submitted" class="btn btn-info pull-right" ng-click="welcome.submit()">Finish</button>
+                            </h4>
+                        </div>
+
                     </div>
                 </div>
+
             </div>
         </div>
-        <li ng-show="welcome.quote" style="list-style: none;" class="text-center"><span id="quote" random-quote></span><a ng-click="welcome.clickToTweet()"><img id="tweet-this" src="/public/images/twitter-16.png" style="margin-left: 5px; margin-top: -4px; height: 13px; width: 13px;"/></a></li>
+        <li ng-if="welcome.panel == 'auth'" ng-show="welcome.quote" style="list-style: none;" class="text-center"><span id="quote" random-quote></span><a ng-click="welcome.clickToTweet()"><img id="tweet-this" src="/public/images/twitter-16.png" style="margin-left: 5px; margin-top: -4px; height: 13px; width: 13px;"/></a></li>
         <br>
         <div class="row">
             <div class="col-md-12 text-center">
